Fixing overflow bug caused by video in with CSS styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,6 @@ body {
     font-weight: 300;
     padding: 0;
     margin: 0 auto;
-    background-color: #93B08D;
 }
 
 .area {
@@ -89,9 +88,14 @@ h3 {
 
 /*...................................Landing page*/
 
+#home {
+        margin: 0px;
+        padding: 0px;
+    }
+    
 #landingPage {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -103,6 +107,7 @@ h3 {
   margin: 0;
   padding: 0;
   z-index: -1;
+
 }
 
 .overlay {
@@ -145,9 +150,8 @@ h3 {
 }
 
 .contentImage {
-    margin: 30px;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 /*..................................Map */
@@ -253,6 +257,7 @@ address {
 
     .logoGroup {
         display: flex;
+
         flex-wrap: wrap;
         justify-content: center;
     }
@@ -289,6 +294,12 @@ address {
         margin: 0;
         padding: 0;
         z-index: -1;
+    }
+
+    .contentImage {
+        margin: 30px;
+        width: 90%;
+        height: 90%;
     }
 
 }
